Update FileExt_existsTest.java
Fixed string formatting into Java 14's formatter over string.